fix: change variable name and spacing

--- a/src/pages/MovieInfo/styles.css
+++ b/src/pages/MovieInfo/styles.css
@@ -1,24 +1,24 @@
 .ContentMovie {
-  display:  flex;
+  display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 20px;;
 }
 
-.ImgMovie {
-  width: 100%;
+.ContentImgMovie {
   height: auto;
   margin: 0 auto;
 }
 
-.ImgMovie img {
+.ContentImgMovie img {
   display: block;
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
   border-radius: 5px;
+  margin: 0px auto;
 }
 
-.ImgMovie p {
+.ContentImgMovie p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,17 +67,17 @@
 }
 
 @media (max-width: 40rem) {
-
-
-  .ImgMovie {
+  .ContentImgMovie {
     width: 100%;
     height: auto;
     margin: 0 auto;
   }
 
+  .ContentImgMovie img {
+    width: 40%;
+  }
 
-
-  .ImgMovie p {
+  .ContentImgMovie p {
     font-size: 18px;
   }
 
